--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Cayman theme
-description: Cayman is a clean, responsive theme for GitHub Pages.
+title: Initiative pour former une association culturelle à l'ENS
+description: Une association culturelle en train de se former
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
