--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Initiative pour former une association culturelle à l'ENS
 description: Une association culturelle en train de se former
-show_downloads: true
+show_downloads: false
 google_analytics:
 theme: jekyll-theme-cayman
